Implement /clubs API routes
